tests/reference/asr-test_const_list_remove-c5deb20.stderr
semantic error: cannot remove element from a const list
 --> tests/errors/test_const_list_remove.py:7:5
  |
7 |     CONST_INTEGER_LIST.remove(1)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
